@@ -79,6 +79,7 @@ static struct FuncLUT{
     {"vsp",   &ONScripterLabel::vspCommand},
     {"voicevol",   &ONScripterLabel::voicevolCommand},
     {"trap",   &ONScripterLabel::trapCommand},
+    {"textspeeddefault",   &ONScripterLabel::textspeeddefaultCommand},
     {"textspeed",   &ONScripterLabel::textspeedCommand},
     {"textshow",   &ONScripterLabel::textshowCommand},
     {"texton",   &ONScripterLabel::textonCommand},
@@ -94,6 +95,7 @@ static struct FuncLUT{
     {"tal", &ONScripterLabel::talCommand},
     {"tablegoto",   &ONScripterLabel::tablegotoCommand},
     {"systemcall",   &ONScripterLabel::systemcallCommand},
+    {"strsph",   &ONScripterLabel::strspCommand},
     {"strsp",   &ONScripterLabel::strspCommand},
     {"stop",   &ONScripterLabel::stopCommand},
     {"sp_rgb_gradation",   &ONScripterLabel::sp_rgb_gradationCommand},
